compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__target_implementations__function_with_no_valid_implementations.snap
---
source: compiler-core/src/type_/tests/target_implementations.rs
assertion_line: 254
expression: "\n@external(javascript, \"foo\", \"bar\")\nfn javascript_only() -> Int\n        \n@external(erlang, \"foo\", \"bar\")\nfn erlang_only() -> Int\n\npub fn main() {\n    javascript_only()\n    erlang_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:9:5
  │
9 │     javascript_only()
  │     ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
